--- a/environment.yaml
+++ b/environment.yaml
@@ -4,20 +4,20 @@ channels:
   - defaults
 dependencies:
   - altair=5.1.2
-  - ipykernel
-  - jinja2
-  - matplotlib[version='>=3.8.0']
-  - nb_conda_kernels
-  - pandas[version='>=2.1.1']
-  - pip[version='>=23.2.1']
+  - ipykernel=6.26.0
+  - jinja2=3.1.2
+  - matplotlib=3.8.0
+  - nb_conda_kernels=2.3.1 
+  - pandas=2.1.1
+  - pip=23.2.1
   - python==3.10
-  - requests[version='>=2.24.0']
-  - scikit-learn[version='>=1.3.1']
-  - vega_datasets
-  - vegafusion
-  - vegafusion-jupyter
-  - vegafusion-python-embed
-  - vl-convert-python
+  - requests=2.24.0
+  - scikit-learn=1.3.1
+  - vega_datasets= 0.9.0 
+  - vegafusion=1.4.3
+  - vegafusion-jupyter=1.4.3
+  - vegafusion-python-embed=1.4.3
+  - vl-convert-python=1.1.0
   - pip>=23.2.1   
   - pip:
     - imblearn==0.0
