--- a/environment.yaml
+++ b/environment.yaml
@@ -18,6 +18,7 @@ dependencies:
   - vegafusion-jupyter=1.4.3
   - vegafusion-python-embed=1.4.3
   - vl-convert-python=1.1.0
-  - pip>=23.2.1   
+  - pip>=23.2.1
+  - pytest=7.4.3 
   - pip:
     - imblearn==0.0
