--- a/environment.yaml
+++ b/environment.yaml
@@ -9,6 +9,7 @@ dependencies:
   - matplotlib=3.8.0
   - nb_conda_kernels=2.3.1 
   - pandas=2.1.1
+  - numpy=1.26.0 
   - pip=23.2.1
   - python==3.10
   - requests=2.24.0
