--- a/report/_config.yml
+++ b/report/_config.yml
@@ -1,5 +1,5 @@
-title: "CardioPredict: Assessing Heart Disease Risk"
-author: "Joey Wu, He Ma, Sandy Gross and Doris Wang"
+title: "CardioPredict: Assessing Cardiovascular Disease Risk"
+author: "Joey Wu, He Ma, Sandy Gross, Doris Wang"
 date: "2023-12-01"
 sphinx:
   config:
