--- a/environment.yaml
+++ b/environment.yaml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - altair=5.1.2
+  - altair_saver=0.5.0
   - ipykernel=6.26.0
   - jinja2=3.1.2
   - matplotlib=3.8.0
