--- a/environment.yaml
+++ b/environment.yaml
@@ -4,12 +4,12 @@ channels:
   - defaults
 dependencies:
   - altair=5.1.2
-  - altair_saver=0.5.0
   - ipykernel=6.26.0
   - jinja2=3.1.2
   - matplotlib=3.8.0
   - nb_conda_kernels=2.3.1 
   - pandas=2.1.1
+  - make=4.2.1
   - numpy=1.26.0 
   - pip=23.2.1
   - python==3.10
